force-app/main/default/objects/Notificacion__c/Notificacion__c.object-meta.xml
<CustomObject>
    <label>Notificacion</label>
    <nameField>
        <label>Titulo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notificaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>