force-app/main/default/objects/Notificacion__c/fields/APM__c.field-meta.xml
<CustomField>
    <fullName>APM__c</fullName>
    <label>APM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notificaciones</relationshipLabel>
    <relationshipName>Notificaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>