force-app/main/default/objects/Notificacion__c/fields/Id_del_Objeto__c.field-meta.xml
<CustomField>
    <fullName>Id_del_Objeto__c</fullName>
    <label>Id del Objeto</label>
    <length>22</length>
    <type>Text</type>
</CustomField>