force-app/main/default/objects/Notificacion__c/fields/Leido__c.field-meta.xml
<CustomField>
    <fullName>Leido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leido</label>
    <type>Checkbox</type>
</CustomField>