force-app/main/default/objects/Notificacion__c/fields/Relacion__c.field-meta.xml
<CustomField>
    <fullName>Relacion__c</fullName>
    <label>Relacion</label>
    <length>40</length>
    <type>Text</type>
</CustomField>